# production

./: Cargo.toml  Dockerfile  configuration.yaml  init_db.sh  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221225215103_create_subscriptions_table.sql  20230106102527_add_status_to_subscriptions.sql  20230106104355_make_status_not_null_in_subscriptions.sql  20230106104640_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscription_confirms.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription_confirms.rs  subscriptions.rs
