[package]
name = "production"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "production"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full", "rt-multi-thread"] }
config = "0.13.3"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.13"
