[package]
name = "production"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "production"

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full", "rt-multi-thread", "macros", "rt"] }
config = "0.13.3"
uuid = { version = "1.2.2", features = ["v4"] }
chrono = { version = "0.4.23", features = ["clock"] }
log = "0.4.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.1"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
serde_json = "1.0.91"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = [
    "json",
    "rustls-tls"
]

[dev-dependencies]
once_cell = "1.16.0"
quickcheck = "1.0.0"
quickcheck_macros = "1.0.0"
fake = "2.5.0"
wiremock = "0.5.15"
